--- a/src/Components/SignIn/SignIn.css
+++ b/src/Components/SignIn/SignIn.css
@@ -1,3 +1,35 @@
 p {
     margin-top: 500px;
 }
+
+.btn.btn-primary {
+    background-color: black;
+    border-radius: 10px; 
+    border-color: black;
+    margin-bottom: 3%; 
+    margin-right: 5px;
+}
+
+.sign-out.btn.btn-primary {
+    background-color: white;
+    color: black;
+    border-radius: 10px; 
+    border-color: black;
+    margin-bottom: 3%; 
+    margin-right: 5px;
+}
+
+/* .sign-out.btn.btn-primary:hover {
+    background-color: white;
+    border-color: black;
+} */
+
+.btn.btn-primary:hover {
+    background-color: #f43c6a;
+    border-radius: 10px; 
+    border-color: #f43c6a;
+    margin-bottom: 3%; 
+    margin-right: 5px;
+    opacity: 90%;
+}
+
