--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -1,33 +1,59 @@
-@import url('https://fonts.googleapis.com/css2?family=Mrs+Sheppards&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Notable&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Corben:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@100;200;300;400;500;600;700;800&display=swap');
 
 .landing-photo {
     position: relative;
     float: right;
-    width: 75%;
-    margin-top: -10%;
-    margin-right: -3%;
+    width: 135%;
+    margin-top: -5%;
+    margin-right: -30px;
+    /* margin-right: auto; */
     z-index: 0;
 }
 
+/* // with background image */
+/* .search-form {
+    position: absolute;
+    font-family: 'Big Shoulders Text', cursive;
+    letter-spacing: 1px;
+    text-align: center;
+   z-index: 1;
+   margin-top: 75%;
+   margin-left: auto;
+   max-width: 60%;
+} */
+
+/* // without background image */
 .search-form {
     position: absolute;
+    font-family: 'Big Shoulders Text', cursive;
+    letter-spacing: 1px;
+    text-align: center;
    z-index: 1;
-   margin-top: 50%;
-   margin-left: 25px;
-   width: 60%;
+   margin-top: 25%;
+   max-width: 60%;
+}
+
+.top-five-container {
+    position: absolute;
+    font-family: 'Big Shoulders Text', cursive;
+    letter-spacing: 1px;
+    text-align: center;
+    max-width: 100%;
+
+
 }
 
 .landing-page-logo {
-    font-family: 'Notable', sans-serif;    
+    font-family: 'Corben', cursive;
     color: black;
     letter-spacing: 3px;
     position: absolute;
-    text-align: left;
+    text-align: center;
     z-index: 1;
-    margin-top: 25%;
-    margin-left: 5%;
+    margin-top: 2%;
+    margin-left: 5px;
+    margin-right: 5px;
     /* transform: rotate(-20deg); */
 }
 
