--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -40,7 +40,10 @@
     text-align: center;
     max-width: 100%;
 
+}
 
+.email-control {
+    letter-spacing: 1px;
 }
 
 .landing-page-logo {
@@ -61,6 +64,7 @@
     border-radius: 10px; 
     border-color: black;
     margin-bottom: 3%;  
+    letter-spacing: 1px;
 }
 
 .search-button.btn.btn-secondary:hover {
