--- a/src/Components/SignIn/SignIn.css
+++ b/src/Components/SignIn/SignIn.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@100;200;300;400;500;600;700;800&display=swap');
+
+.sign-in-form {
+    font-family: 'Big Shoulders Text', cursive;
+    letter-spacing: 1px;
+    /* font-size: 20px; */
+}
+
 p {
     margin-top: 500px;
 }
