--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@100;200;300;400;500;600;700;800&display=swap');
 
 a.nav-link {
-    font-family: 'Big Shoulders Text', cursive;
+    /* font-family: 'Big Shoulders Text', cursive; */
     color: black !important; 
     font-weight: bold;
     letter-spacing: 1px;
