--- a/src/Components/AddTopFive/AddTopFive.css
+++ b/src/Components/AddTopFive/AddTopFive.css
@@ -12,7 +12,7 @@
 
 .top-five-form {
     margin: 0 auto; 
-    max-width: 50%; 
+    max-width: 70%; 
     margin-bottom: 5%; 
 }
 
@@ -57,7 +57,7 @@
 }
 
 .final-delete-button {
-    display: none;
+    /* display: none; */
 }
 
 .delete-input-field {
