--- a/src/Components/Faq/Faq.css
+++ b/src/Components/Faq/Faq.css
@@ -7,6 +7,7 @@
     position: relative;
     text-align: center;
     margin-top: 2%;
+    margin-bottom: 3%;
     margin-left: 5px;
     margin-right: 5px;
 }
@@ -16,4 +17,8 @@
     margin-left: 5%;
     margin-right: 5%;
 }
+
+a:link {
+    text-decoration: none;
+  }
 
