Button styling on profile page

--- a/src/Components/AddTopFive/AddTopFive.css
+++ b/src/Components/AddTopFive/AddTopFive.css
@@ -46,18 +46,25 @@
     opacity: 90%;
 }
 
-.delete-button.btn.btn-danger.btm-sm {
-    display: none; 
-}
-
 .edit-button {
     margin-top: 5%;
     margin-right: 2%; 
     margin-bottom: 5%; 
 }
 
-.final-delete-button {
-    /* display: none; */
+.delete-button.btn.btn-danger.btn-sm {
+    background-color: white;
+    color: black; 
+    border-radius: 10px; 
+    border-color: black;
+    margin-top: 5%;
+    margin-bottom: 3%; 
+}
+
+.delete-button.btn.btn-danger.btn-sm:hover {
+    background-color: #f43c6a;
+    border-color: #f43c6a;
+    opacity: 90%;
 }
 
 .delete-input-field {
