--- a/src/Components/Faq/Faq.css
+++ b/src/Components/Faq/Faq.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Corben:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gravitas+One&family=Vidaloka&display=swap');
 
 .faq-header {
-    font-family: 'Corben', cursive;
+    /* font-family: 'Corben', cursive; */
+    font-family: 'Gravitas One', cursive;
     color: black;
-    letter-spacing: 3px;
+    letter-spacing: 1px;
     position: relative;
     text-align: center;
     margin-top: 2%;
